@startuml mvc
title MVC
interface sujet {
    + void ajouterObservateur(Observateur o)
    + void notifierObservateurs()
}
interface Observateur {
    + void actualiser(Sujet s)
}
class Model {
    - File package
    --
    + Model()
    +ajouterPackage(File)
    + void ajouterObservateur(Observateur o)
    + void notifierObservateurs()
}
interface EventHandler {
    + void handle(ActionEvent event)
}
class ImporterControler {
    + void handle(ActionEvent event)
}
Model ..|> sujet
Model --> Observateur
Observateur ..> sujet : "sujet"
ImporterControler ..|> EventHandler
ImporterControler --> Model
@end
